[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/background.png" type="Texture" id=1]
[ext_resource path="res://menu/levelSelect/levelSelect.gd" type="Script" id=2]
[ext_resource path="res://fonts/abaddon/Abaddon Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="levelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="background" type="TextureRect" parent="."]
self_modulate = Color( 0.729412, 0.482353, 0.403922, 1 )
margin_right = 2080.0
margin_bottom = 2080.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Tween" type="Tween" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 64
custom_constants/margin_left = 32
custom_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 64.0
margin_right = 992.0
margin_bottom = 536.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "level select"
align = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 960.0
margin_bottom = 76.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 960.0
margin_bottom = 472.0
size_flags_vertical = 3
alignment = 1

[node name="line1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 960.0
margin_bottom = 194.0
custom_constants/separation = 10
alignment = 1

[node name="line2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 960.0
margin_bottom = 198.0
custom_constants/separation = 10
alignment = 1

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
